// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertRule abilities should report no permissions while we are loading data for cloud rule 1`] = `
{
  "create-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "delete-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": true,
    "supported": false,
  },
  "delete-alert-rule-permanently": {
    "allowed": false,
    "granted": false,
    "loading": true,
    "supported": false,
  },
  "duplicate-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": true,
    "supported": false,
  },
  "explore-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": true,
    "supported": true,
  },
  "export-grafana-managed-rules": {
    "allowed": false,
    "granted": false,
    "loading": true,
    "supported": true,
  },
  "modify-export-rule": {
    "allowed": false,
    "granted": false,
    "loading": true,
    "supported": false,
  },
  "pause-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": true,
    "supported": false,
  },
  "restore-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": true,
    "supported": false,
  },
  "silence-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": true,
    "supported": false,
  },
  "update-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": true,
    "supported": false,
  },
  "view-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": true,
    "supported": true,
  },
}
`;

exports[`AlertRule abilities should report that all actions are supported for a Grafana Managed alert rule 1`] = `
{
  "create-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "delete-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "delete-alert-rule-permanently": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "duplicate-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "explore-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "export-grafana-managed-rules": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "modify-export-rule": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "pause-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "restore-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "silence-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "update-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "view-alert-rule": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
}
`;

exports[`alertmanager abilities should report Create / Update / Delete actions aren't supported for external vanilla alertmanager 1`] = `
{
  "create-contact-point": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "create-notification-policy": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "create-notification-template": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "create-silence": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "create-time-interval": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "decrypt-secrets": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "delete-contact-point": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "delete-notification-policy": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "delete-notification-template": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "delete-time-interval": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "edit-contact-points": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "edit-notification-template": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "export-contact-point": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "export-notification-policies": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "export-time-intervals": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "preview-silenced-alerts": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "update-notification-policy-tree": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "update-silence": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "update-time-interval": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "view-alert-groups": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "view-autogenerated-policy-tree": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "view-contact-point": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "view-notification-policy-tree": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "view-notification-template": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "view-silence": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "view-time-interval": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
}
`;

exports[`alertmanager abilities should report everything except exporting for Mimir alertmanager 1`] = `
{
  "create-contact-point": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "create-notification-policy": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "create-notification-template": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "create-silence": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "create-time-interval": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "decrypt-secrets": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "delete-contact-point": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "delete-notification-policy": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "delete-notification-template": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "delete-time-interval": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "edit-contact-points": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "edit-notification-template": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "export-contact-point": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "export-notification-policies": {
    "allowed": true,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "export-time-intervals": {
    "allowed": true,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "preview-silenced-alerts": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "update-notification-policy-tree": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "update-silence": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "update-time-interval": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "view-alert-groups": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "view-autogenerated-policy-tree": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": false,
  },
  "view-contact-point": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "view-notification-policy-tree": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "view-notification-template": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "view-silence": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "view-time-interval": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
}
`;

exports[`alertmanager abilities should report everything is supported for builtin alertmanager 1`] = `
{
  "create-contact-point": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "create-notification-policy": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "create-notification-template": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "create-silence": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "create-time-interval": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "decrypt-secrets": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "delete-contact-point": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "delete-notification-policy": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "delete-notification-template": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "delete-time-interval": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "edit-contact-points": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "edit-notification-template": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "export-contact-point": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "export-notification-policies": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "export-time-intervals": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "preview-silenced-alerts": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "update-notification-policy-tree": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "update-silence": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "update-time-interval": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "view-alert-groups": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "view-autogenerated-policy-tree": {
    "allowed": false,
    "granted": false,
    "loading": false,
    "supported": true,
  },
  "view-contact-point": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "view-notification-policy-tree": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "view-notification-template": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "view-silence": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
  "view-time-interval": {
    "allowed": true,
    "granted": true,
    "loading": false,
    "supported": true,
  },
}
`;
